bug:ajustado alteraçoes do Sonnar
bug:ajustado alteraçoes do Sonnar